fix photo not showing

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 .home {
     /* Set the background image and its properties */
-    background-image: url('/assets/photo/home.png');
+    background-image: url('assets/photo/home.png');
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
